# multitime

./: .gitignore  .travis.yml  CREDITS  HISTORY  INSTALL  LICENSE  Makefile.bootstrap  Makefile.in  README  configure.in  format.c  format.h  multitime.1  multitime.c  multitime.h  statistics.c  statistics.h  tvals.h  zvals.h
rpm/: .dockerignore  Dockerfile  docker-compose.yml
rpm/SPECS/: multitime.spec
tests/: Makefile  Makefile.in  test_stats.check
