# Copyright (C)2012 Laurence Tratt http:#tratt.net/laurie/
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.


AC_INIT([multitime], MULTITIME_VERSION)

####################################################################################################
# Generic initialization
#

AC_CONFIG_HEADER(Config.h)

AC_LANG(C)

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_GCC_TRADITIONAL
AC_GNU_SOURCE


####################################################################################################
# Function / feature checks
#

CFLAGS="-std=c99 -O2 -Wall"
LIBS="-lm"


# fileno (Linux)

case `uname -s` in
  Linux* ) CFLAGS="$CFLAGS -D_POSIX_C_SOURCE=2";;
esac

####################################################################################################
# Output
#

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
